welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: type mismatch;
 found   : Int.type
 required: Int
  var T=new Array(Int)(5*num)
                  ^golomb:2: error: type mismatch;
 found   : Int.type
 required: Int
  var T=new Array(Int)(5*num)
                  ^